--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pikaday": "^1.6.1",
     "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.16",
+    "vue-avatar-or-initials": "^1.0.0",
     "vue-axios": "^2.0.2",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
