--- a/config/secrets.env.js.example
+++ b/config/secrets.env.js.example
@@ -2,6 +2,5 @@
 module.exports = {
   registrationAccessKey: '"xxx"',
   debugToken: '"xxx"',
-  apiUrl: '"http://localhost:8000"',
-  statsUrl: '"http://localhost:8009"'
+  apiUrl: '"http://localhost:8000"'
 }
