Fix build config

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.8.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^0.5.8",
     "vue-chartjs": "^3.0.2",
     "vue-loader": "^13.7.1",
