--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+stages:
+  - tests
+  - deploy
+
 dist: trusty
 language: node_js
 node_js:
@@ -11,30 +15,43 @@ addons:
     packages:
       - mysql-server
   chrome: stable
+
 before_install:
 - phpenv global 7.1.11
-- mysql -e 'CREATE DATABASE IF NOT EXISTS strong;'
-- npm install
-- cp config/secrets.env.js.example config/secrets.env.js
-- export CHROME_BIN=/usr/bin/google-chrome
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
-- npm i chromedriver
-- npm run unit
-- git clone "https://github.com/darrynten/strong-lumen" --branch=master ../strong-lumen
-- cd ../strong-lumen
-- composer self-update
-- composer validate --no-check-all --ansi
-- composer install -n
-- cp .env.example .env
-- php artisan migrate
-- php artisan db:seed
-- pwd
-- touch ./storage/logs/lumen.log
-- sudo chmod 777 ./storage/logs/lumen.log
-- nohup php -S 127.0.0.1:8000 -t public &
-- cd -
-- npm run e2e
+
+install:
+  - npm install
+  - cp config/secrets.env.js.example config/secrets.env.js
+
+before_script:
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - npm i chromedriver
+
 after_success:
 - codecov test/unit/coverage/lcov.info -t ${CODECOV_TOKEN}
 - echo "Done"
+
+jobs:
+  include:
+    - stage: tests
+    - script: npm run unit
+    - script: npm run e2e
+        install:
+          git clone "https://github.com/darrynten/strong-lumen" --branch=master ../strong-lumen
+          cd ../strong-lumen
+          composer self-update
+          composer validate --no-check-all --ansi
+          composer install -n
+          cp .env.example .env
+          mysql -e 'CREATE DATABASE IF NOT EXISTS strong;'
+          php artisan migrate
+          php artisan db:seed
+          pwd
+          touch ./storage/logs/lumen.log
+          sudo chmod 777 ./storage/logs/lumen.log
+          nohup php -S 127.0.0.1:8000 -t public &
+          cd -
+    - stage: deploy
+    - script: echo "Add deployment settings!"
