--- a/.travis.yml
+++ b/.travis.yml
@@ -16,32 +16,34 @@ addons:
       - mysql-server
   chrome: stable
 
+# Default steps within each job
 before_install:
 - phpenv global 7.1.11
 
 install:
   - npm install
-  - cp config/secrets.env.js.example config/secrets.env.js
 
 before_script:
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm i chromedriver
-
-after_success:
-- codecov test/unit/coverage/lcov.info -t ${CODECOV_TOKEN}
-- echo "Done"
+  - cp config/secrets.env.js.example config/secrets.env.js
 
 jobs:
   include:
     - stage: tests
       name: "Unit Tests"
       script: npm run unit
+      after_success:
+        codecov test/unit/coverage/lcov.info -t ${CODECOV_TOKEN}
+        echo "Done"
     - stage: tests
       name: "e2e Tests"
       script: npm run e2e
       install:
+        npm install
+        cp config/secrets.env.js.example config/secrets.env.js
         git clone "https://github.com/darrynten/strong-lumen" --branch=master ../strong-lumen
         cd ../strong-lumen
         composer self-update
@@ -57,4 +59,5 @@ jobs:
         nohup php -S 127.0.0.1:8000 -t public &
         cd -
     - stage: deploy
+      name: "No target"
       script: echo "Add deployment settings!"
