semi colon everything

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,26 +35,26 @@ jobs:
       name: "Unit Tests"
       script: npm run unit
       after_success:
-        codecov test/unit/coverage/lcov.info -t ${CODECOV_TOKEN}
-        echo "Done"
+        codecov test/unit/coverage/lcov.info -t ${CODECOV_TOKEN};
+        echo "Done";
     - stage: tests
       name: "e2e Tests"
       script: npm run e2e
       install:
-        git clone "https://github.com/darrynten/strong-lumen" --branch=master ../strong-lumen
-        cd ../strong-lumen
-        composer self-update
-        composer validate --no-check-all --ansi
-        composer install -n
-        cp .env.example .env
-        mysql -e 'CREATE DATABASE IF NOT EXISTS strong;'
-        php artisan migrate
-        php artisan db:seed
-        pwd
-        touch ./storage/logs/lumen.log
-        sudo chmod 777 ./storage/logs/lumen.log
-        nohup php -S 127.0.0.1:8000 -t public &
-        cd -
+        git clone "https://github.com/darrynten/strong-lumen" --branch=master ../strong-lumen;
+        cd ../strong-lumen;
+        composer self-update;
+        composer validate --no-check-all --ansi;
+        composer install -n;
+        cp .env.example .env;
+        mysql -e 'CREATE DATABASE IF NOT EXISTS strong;';
+        php artisan migrate;
+        php artisan db:seed;
+        pwd;
+        touch ./storage/logs/lumen.;
+        sudo chmod 777 ./storage/logs/lumen.log;
+        nohup php -S 127.0.0.1:8000 -t public &;
+        cd -;
     - stage: deploy
       name: "No target"
       script: echo "Add deployment settings!"
