--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 stages:
   - tests
-  - name: deploy
-    if: branch = master
+  - deploy
 
 dist: trusty
 language: node_js
@@ -27,6 +26,19 @@ before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - npm i chromedriver
+- git clone "https://github.com/darrynten/strong-lumen" --branch=master ../strong-lumen
+- cd ../strong-lumen
+- composer self-update
+- composer validate --no-check-all --ansi
+- composer install -n
+- cp .env.example .env
+- php artisan migrate
+- php artisan db:seed
+- pwd
+- touch ./storage/logs/lumen.log
+- sudo chmod 777 ./storage/logs/lumen.log
+- nohup php -S 127.0.0.1:8000 -t public &
+- cd -
 
 jobs:
   include:
@@ -39,21 +51,6 @@ jobs:
     - stage: tests
       name: "e2e Tests"
       script: npm run e2e
-      install:
-      -  git clone "https://github.com/darrynten/strong-lumen" --branch=master ../strong-lumen
-      -  cd ../strong-lumen
-      -  composer self-update
-      -  composer validate --no-check-all --ansi
-      -  composer install -n
-      -  cp .env.example .env
-      -  mysql -e 'CREATE DATABASE IF NOT EXISTS strong;'
-      -  php artisan migrate
-      -  php artisan db:seed
-      -  pwd
-      -  touch ./storage/logs/lumen.log
-      -  sudo chmod 777 ./storage/logs/lumen.log
-      -  nohup php -S 127.0.0.1:8000 -t public &
-      -  cd -
     - stage: deploy
       name: "No target"
       script: echo "Add deployment settings!"
