--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "axios": "^0.17.1",
     "es6-promise": "^4.2.4",
     "md5": "^2.2.1",
-    "moment": "^2.21.0",
+    "moment": "^2.22.2",
     "pikaday": "^1.6.1",
-    "vee-validate": "^2.0.0-rc.25",
+    "vee-validate": "^2.0.9",
     "vue": "^2.5.16",
     "vue-avatar-or-initials": "^1.0.0",
-    "vue-axios": "^2.0.2",
+    "vue-axios": "^2.1.2",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
     "vue-svg-loader": "^0.4.0"
@@ -32,24 +32,24 @@
     "@vue/test-utils": "1.0.0-beta.10",
     "@websanova/vue-auth": "^2.20.9-beta",
     "autoprefixer": "^7.2.6",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-istanbul": "^4.1.1",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-node5": "^1.2.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^4.1.2",
-    "chalk": "^2.3.2",
+    "chalk": "^2.4.1",
     "chart.js": "^2.7.2",
-    "chromedriver": "^2.37.0",
-    "codecov": "^3.0.0",
+    "chromedriver": "^2.40.0",
+    "codecov": "^3.0.4",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.12.1",
@@ -58,31 +58,31 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-chai-friendly": "^0.4.0",
     "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.11",
     "flush-promises": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
-    "karma-sinon-chai": "^1.3.1",
+    "karma-sinon-chai": "^1.3.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.13",
     "mocha": "^3.2.0",
-    "nightwatch": "^0.9.20",
-    "node-sass": "^4.5.3",
+    "nightwatch": "^0.9.21",
+    "node-sass": "^4.9.2",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.4.0",
@@ -90,23 +90,23 @@
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "^1.3.3",
-    "selenium-server": "^3.0.1",
+    "selenium-server": "^3.13.0",
     "semver": "^5.5.0",
     "shelljs": "^0.7.6",
-    "sinon": "^4.0.0",
+    "sinon": "^4.5.0",
     "sinon-chai": "^2.8.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^0.5.8",
-    "vue-chartjs": "^3.0.2",
-    "vue-loader": "^13.7.1",
+    "vue-chartjs": "^3.3.2",
+    "vue-loader": "^13.7.2",
     "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
-    "webpack": "^3.11.0",
-    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-merge": "^4.1.2"
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-merge": "^4.1.3"
   },
   "engines": {
     "node": ">= 4.0.0",
