fix echo string

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,4 +55,4 @@ jobs:
     - stage: deploy
       name: "No target"
       before_install: true
-      script: echo "Add deployment settings!"
+      script: echo Add deployment settings!
