--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "es6-promise": "^4.2.5",
     "md5": "^2.2.1",
     "moment": "^2.22.2",
-    "pikaday": "^1.8.0",
     "unicorn-vue-datatable": "^1.2.1",
     "unicorn-vue-toaster": "^1.0.1",
     "vee-validate": "^2.1.0-beta.11",
@@ -43,6 +42,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
     "@vue/test-utils": "1.0.0-beta.25",
     "@websanova/vue-auth": "^2.21.14-beta",
     "ajv": "^6.5.4",
@@ -53,9 +53,10 @@
     "babel-preset-es2015-node5": "^1.2.0",
     "chai": "^4.2.0",
     "chalk": "^2.4.1",
-    "chart.js": "^2.7.3",
     "chromedriver": "^2.43.0",
     "codecov": "^3.1.0",
+    "chart.js": "^2.7.3",
+    "compression-webpack-plugin": "^2.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.5.4",
     "cross-env": "^5.2.0",
@@ -65,7 +66,7 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-chai-friendly": "^0.4.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-html": "^4.0.6",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
@@ -104,17 +105,17 @@
     "shelljs": "^0.8.2",
     "sinon": "^7.1.0",
     "sinon-chai": "^3.2.0",
-    "uglifyjs-webpack-plugin": "^2.0.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
-    "vue-chartjs": "^3.4.0",
     "vue-loader": "^15.4.2",
     "vue-server-renderer": "^2.5.17",
     "vue-style-loader": "^4.1.2",
-    "vue-svg-loader": "^0.11.0",
+    "vue-svg-loader": "^0.10.0",
     "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1",
     "webpack": "^4.23.1",
     "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.4"
