--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "copy-webpack-plugin": "^4.5.4",
     "cross-env": "^5.2.0",
     "cross-spawn": "^6.0.5",
+    "cypress": "^3.1.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
