--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "cypress": "$(npm bin)/cypress run",
-    "test": "npm run unit && npm run e2e",
+    "test": "npm run unit && npm run cypress",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "eslint": "node_modules/bin/eslint ."
   },
   "dependencies": {
     "axios": "^0.18.0",
     "es6-promise": "^4.2.5",
-    "md5": "^2.2.1",
-    "moment": "^2.22.2",
     "unicorn-vue-datatable": "^1.2.1",
     "unicorn-vue-toaster": "^1.0.1",
     "vee-validate": "^2.1.0-beta.11",
@@ -28,9 +26,9 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.1.6",
     "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
     "@babel/plugin-proposal-function-sent": "^7.0.0",
     "@babel/plugin-proposal-json-strings": "^7.0.0",
@@ -40,12 +38,12 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.1.2",
+    "@babel/runtime": "^7.1.5",
     "@vue/test-utils": "1.0.0-beta.25",
     "@websanova/vue-auth": "^2.21.14-beta",
-    "ajv": "^6.5.4",
+    "ajv": "^6.5.5",
     "autoprefixer": "^9.3.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -53,17 +51,15 @@
     "babel-preset-es2015-node5": "^1.2.0",
     "chai": "^4.2.0",
     "chalk": "^2.4.1",
-    "chromedriver": "^2.43.0",
     "codecov": "^3.1.0",
-    "chart.js": "^2.7.3",
     "compression-webpack-plugin": "^2.0.0",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.5.4",
+    "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "cross-spawn": "^6.0.5",
     "cypress": "^3.1.1",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.7.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
@@ -74,11 +70,9 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
-    "flush-promises": "^1.0.0",
-    "font-awesome": "^4.7.0",
+    "flush-promises": "^1.0.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
@@ -92,8 +86,7 @@
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^4.0.0-rc.2",
     "mocha": "^5.2.0",
-    "nightwatch": "^1.0.11",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^3.0.0",
@@ -101,10 +94,9 @@
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.4",
-    "selenium-server": "^3.14.0",
     "semver": "^5.6.0",
-    "shelljs": "^0.8.2",
-    "sinon": "^7.1.0",
+    "shelljs": "^0.8.3",
+    "sinon": "^7.1.1",
     "sinon-chai": "^3.2.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
@@ -114,7 +106,7 @@
     "vue-svg-loader": "^0.10.0",
     "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1",
-    "webpack": "^4.23.1",
+    "webpack": "^4.26.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
