Removing unused files

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,11 @@ jobs:
         - echo "Done"
     - stage: tests
       name: "Cypress Tests"
-      script: ./scripts/setup_cypress.sh && npm run dev && $(npm bin)/cypress run
+      script:
+        - nohup npm run dev &
+        - sleep 20
+        - ./scripts/setup_cypress.sh
+        - $(npm bin)/cypress run
     - stage: build
       name: "Build"
       script: npm run build
