--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_install:
 - nohup php -S 127.0.0.1:8000 -t public &
 - cd -
 - npm install
-- npm run dev
+- nohup npm run dev
 jobs:
   include:
     - stage: tests
