--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
   - git clone "https://github.com/darrynten/strong-lumen" --branch=master ../strong-lumen
   - cd ../strong-lumen
   - cp .env.example .env
+  - cat .env
   - composer self-update
   - composer validate --no-check-all --ansi
   - composer install -n
