Update example secrets file

--- a/config/secrets.env.js.example
+++ b/config/secrets.env.js.example
@@ -1,6 +1,6 @@
 'use strict'
 module.exports = {
-  registrationAccessKey: '"xxx"',
-  debugToken: '"xxx"',
-  apiUrl: '"http://localhost:8000"'
+  registrationAccessKey: '00000000-0000-0000-0000-000000000000',
+  debugToken: '00000000-0000-0000-0000-000000000000',
+  apiUrl: 'http://localhost:8000'
 }
