--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@unicorn/quick-dash",
-  "version": "2.0.0-alpha",
-  "description": "Quick Dashboards",
-  "author": "Darryn Ten, Steve Ops",
-  "private": true,
+  "name": "@unicorns/quick-dash-framework",
+  "version": "2.0.1",
+  "description": "Quick Dashboard Framework",
+  "author": "Unicorn Global et al",
+  "license": "MIT",
+  "private": false,
   "module": "src/main.js",
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -16,12 +17,12 @@
     "eslint": "node_modules/bin/eslint ."
   },
   "dependencies": {
+    "@unicorns/avatars": "^1.1.2",
+    "@unicorns/data-table": "^1.3.1",
+    "@unicorns/toaster": "^1.1.0",
     "axios": "^0.18.0",
-    "unicorn-vue-datatable": "^1.2.1",
-    "unicorn-vue-toaster": "^1.0.1",
     "vee-validate": "^2.1.3",
     "vue": "^2.5.21",
-    "vue-avatar-or-initials": "^1.0.7",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.2"
   },
