--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/UnicornGlobal/quick-dash-framework#readme",
   "dependencies": {
-    "@unicorns/avatars": "^1.1.2",
-    "@unicorns/data-table": "^1.3.1",
+    "@babel/code-frame": "^7.0.0",
+    "@unicorns/avatars": "../vue-avatar-or-initials",
+    "@unicorns/data-table": "../vue-data-table",
     "@unicorns/toaster": "^1.1.2",
     "axios": "^0.18.0",
     "vee-validate": "^2.1.4",
@@ -109,7 +110,7 @@
     "shelljs": "^0.8.3",
     "sinon": "^7.2.2",
     "sinon-chai": "^3.3.0",
-    "uglifyjs-webpack-plugin": "^2.1.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.4.2",
     "vue-server-renderer": "^2.5.21",
