--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@unicorns/quick-dash-framework",
-  "version": "2.0.10-alpha",
+  "version": "2.0.11-alpha",
   "description": "Quick Dashboard Framework",
   "author": "Unicorn Global et al",
   "license": "MIT",
@@ -26,8 +26,8 @@
   "homepage": "https://github.com/UnicornGlobal/quick-dash-framework#readme",
   "dependencies": {
     "@babel/code-frame": "^7.0.0",
-    "@unicorns/avatars": "../vue-avatar-or-initials",
-    "@unicorns/data-table": "../vue-data-table",
+    "@unicorns/avatars": "^1.1.3",
+    "@unicorns/data-table": "^1.3.2",
     "@unicorns/toaster": "^1.1.2",
     "axios": "^0.18.0",
     "vee-validate": "^2.1.4",
