--- a/config/secrets.env.js.example
+++ b/config/secrets.env.js.example
@@ -1,5 +1,6 @@
 'use strict'
 module.exports = {
+  appName: 'Quick Dash',
   registrationAccessKey: '00000000-0000-0000-0000-000000000000',
   debugToken: '00000000-0000-0000-0000-000000000000',
   apiUrl: 'http://localhost:8000'
