--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@unicorns/quick-dash-framework",
-  "version": "2.0.11-alpha",
+  "version": "2.0.13-alpha",
   "description": "Quick Dashboard Framework",
   "author": "Unicorn Global et al",
   "license": "MIT",
   "private": false,
   "module": "src/main.js",
+  "files": [
+    "src/**/*",
+    "!.DS_Store"
+  ],
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "npm run dev",
@@ -25,15 +29,16 @@
   },
   "homepage": "https://github.com/UnicornGlobal/quick-dash-framework#readme",
   "dependencies": {
-    "@babel/code-frame": "^7.0.0",
     "@unicorns/avatars": "^1.1.3",
     "@unicorns/data-table": "^1.3.2",
     "@unicorns/toaster": "^1.1.2",
+    "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.18.0",
     "vee-validate": "^2.1.4",
     "vue": "^2.5.21",
     "vue-axios": "^2.1.4",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -52,7 +57,6 @@
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.2.0",
     "@vue/test-utils": "1.0.0-beta.27",
-    "@websanova/vue-auth": "^2.21.14-beta",
     "ajv": "^6.6.2",
     "autoprefixer": "^9.4.3",
     "babel-eslint": "^10.0.1",
@@ -117,7 +121,6 @@
     "vue-style-loader": "^4.1.2",
     "vue-svg-loader": "^0.11.0",
     "vue-template-compiler": "^2.5.21",
-    "vuex": "^3.0.1",
     "webpack": "^4.28.2",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
