--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.18.1",
     "vee-validate": "^2.1.7",
-    "vue": "^2.6.6",
+    "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -56,7 +56,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@vue/test-utils": "1.0.0-beta.27",
+    "@vue/test-utils": "1.0.0-beta.29",
     "ajv": "^6.9.1",
     "autoprefixer": "^9.4.7",
     "babel-eslint": "^10.0.2",
@@ -99,7 +99,7 @@
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^4.0.0-rc.6",
+    "karma-webpack": "^4.0.2",
     "mocha": "^5.2.0",
     "node-sass": "^4.11.0",
     "opn": "^5.4.0",
@@ -117,10 +117,10 @@
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.6.2",
-    "vue-server-renderer": "^2.6.6",
+    "vue-server-renderer": "^2.6.10",
     "vue-style-loader": "^4.1.2",
     "vue-svg-loader": "^0.11.0",
-    "vue-template-compiler": "^2.6.6",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.7",
