--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@unicorns/avatars": "^2.0.0",
     "@unicorns/data-table": "^2.0.1",
+    "@unicorns/sign-me-up": "../vue-sign-me-up",
     "@unicorns/toaster": "^2.0.1",
     "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.19.0",
