--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
   "dependencies": {
     "@unicorns/avatars": "^2.0.0",
     "@unicorns/data-table": "^2.0.1",
-    "@unicorns/sign-me-up": "../vue-sign-me-up",
+    "@unicorns/sign-me-up": "^1.0.0",
     "@unicorns/toaster": "^2.0.1",
     "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.19.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
-    "vue-router": "^3.1.2",
+    "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -71,11 +71,11 @@
     "compression-webpack-plugin": "^3.0.0",
     "connect-history-api-fallback": "^1.6.0",
     "copy-webpack-plugin": "^5.0.4",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "cross-spawn": "^6.0.5",
     "css-loader": "^2.1.1",
     "cypress": "^3.4.1",
-    "eslint": "^6.2.2",
+    "eslint": "^6.3.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^3.0.0",
@@ -114,7 +114,7 @@
     "sass-resources-loader": "^2.0.1",
     "semver": "^6.3.0",
     "shelljs": "^0.8.3",
-    "sinon": "^7.4.1",
+    "sinon": "^7.4.2",
     "sinon-chai": "^3.3.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^2.1.0",
@@ -126,7 +126,7 @@
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.7",
-    "webpack-dev-middleware": "^3.7.0",
+    "webpack-dev-middleware": "^3.7.1",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
   },
