--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ stages:
 # Default steps within each job
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS strong;'
-  - cp config/secrets.env.js.example config/secrets.env.js
   - git clone "https://github.com/UnicornGlobal/strong-lumen" --branch=master ../strong-lumen
   - cd ../strong-lumen
   - cp .env.example .env
@@ -38,6 +37,7 @@ before_install:
   - nohup php -S 127.0.0.1:8000 -t public &
   - cd -
 install:
+  - cp config/secrets.env.example.js config/secrets.env.js
   - npm install
 jobs:
   include:
@@ -51,7 +51,7 @@ jobs:
       name: "Cypress Tests"
       script:
         - nohup npm run dev &
-        - sleep 20
+        - sleep 30
         - ./scripts/setup_cypress.sh
         - $(npm bin)/cypress run
     - stage: build
