--- a/.travis.yml
+++ b/.travis.yml
@@ -47,14 +47,14 @@ jobs:
       after_success:
         - codecov test/unit/coverage/lcov.info -t ${CODECOV_TOKEN}
         - echo "Done"
-    - stage: tests
-      name: "Cypress Tests"
-      script:
-        - ./scripts/setup_environment.sh
-        - ./scripts/setup_cypress.sh
-        - nohup npm run dev &
-        - sleep 30
-        - $(npm bin)/cypress run
+    # - stage: tests
+      # name: "Cypress Tests"
+      # script:
+        # - ./scripts/setup_environment.sh
+        # - ./scripts/setup_cypress.sh
+        # - nohup npm run dev &
+        # - sleep 30
+        # - $(npm bin)/cypress run
     - stage: build
       name: "Build"
       script: npm run build
