Show validation errors on monthly data form

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fibers": "^4.0.1",
     "file-loader": "^4.2.0",
     "flush-promises": "^1.0.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -110,6 +111,7 @@
     "portfinder": "^1.0.24",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.0",
+    "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.1",
     "semver": "^6.3.0",
