--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@unicorns/data-table": "^2.0.4",
     "@unicorns/sign-me-up": "^1.0.2",
     "@unicorns/toaster": "^2.0.3",
+    "@unicorns/uploader": "^1.0.1",
     "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
