--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
+    "vue-tel-input": "^4.0.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
