--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
-    "vue-tel-input": "^4.4.0",
+    "vue-tel-input": "4.3.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
