--- a/package.json
+++ b/package.json
@@ -38,46 +38,46 @@
     "@unicorns/uploader": "^2.0.3",
     "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.19.2",
-    "moment": "^2.25.3",
+    "moment": "^2.26.0",
     "pikaday": "^1.8.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.1.6",
-    "vue-tel-input": "4.3.0",
+    "vue-router": "^3.3.2",
+    "vue-tel-input": "4.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-    "@babel/plugin-proposal-function-sent": "^7.8.3",
-    "@babel/plugin-proposal-json-strings": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.1",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.1",
+    "@babel/plugin-proposal-function-sent": "^7.10.1",
+    "@babel/plugin-proposal-json-strings": "^7.10.1",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.1",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-syntax-import-meta": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/register": "^7.9.0",
-    "@babel/runtime": "^7.9.6",
+    "@babel/plugin-syntax-import-meta": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/register": "^7.10.1",
+    "@babel/runtime": "^7.10.2",
     "@vue/test-utils": "1.0.0-beta.29",
     "ajv": "^6.12.2",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^5.2.0",
     "babel-preset-es2015-node5": "^1.2.0",
     "chai": "^4.2.0",
     "chalk": "^2.4.2",
-    "codecov": "^3.6.1",
+    "codecov": "^3.7.0",
     "compression-webpack-plugin": "^3.1.0",
     "connect-history-api-fallback": "^1.6.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^5.2.1",
-    "cross-spawn": "^7.0.2",
+    "cross-spawn": "^7.0.3",
     "css-loader": "^3.5.3",
     "cypress": "^3.8.3",
     "eslint": "^6.8.0",
@@ -86,7 +86,7 @@
     "eslint-loader": "^3.0.4",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-html": "^6.0.2",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
@@ -116,14 +116,14 @@
     "portfinder": "^1.0.26",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.26.5",
+    "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "sass-resources-loader": "^2.0.3",
     "semver": "^6.3.0",
     "shelljs": "^0.8.4",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.5.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^3.0.3",
     "url-loader": "^2.3.0",
     "vue-loader": "^15.9.2",
     "vue-server-renderer": "^2.6.11",
@@ -131,7 +131,7 @@
     "vue-svg-loader": "^0.12.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
