--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@unicorns/sign-me-up": "^1.3.0",
     "@unicorns/toaster": "^2.0.4",
     "@unicorns/uploader": "^2.0.3",
-    "@websanova/vue-auth": "^2.21.14-beta",
+    "@vue/composition-api": "^0.6.1",
+    "@websanova/vue-auth": "^3.2.1-beta",
     "axios": "^0.19.2",
     "moment": "^2.26.0",
     "pikaday": "^1.8.0",
